tests/negative/test_explicit_name_taken.orb
fnc main () () {
    sym (x 0);
    explicit::global x i32;
};